fix skeleton alignment

--- a/src/app/skeleton/skeleton-loader/skeleton-loader.component.css
+++ b/src/app/skeleton/skeleton-loader/skeleton-loader.component.css
@@ -216,6 +216,11 @@
   .skeleton-card {
     width: 100%;
   }
+
+  .skeleton-icon-group {
+    display: flex;
+    gap: 45px;
+  }
 }
 
 
